tests/test_variable_state/bad/unknown_state.catala_en
## Test

```catala
declaration scope A:
  output foo content integer
    state bar
    state baz

scope A:
  definition foo state bar equals 1

  definition foo state basz equals foo + 1
```

```catala-test-inline
$ catala Typecheck 
[ERROR]
This identifier is not a state declared for variable foo.

┌─⯈ tests/test_variable_state/bad/unknown_state.catala_en:12.24-12.28:
└──┐
12 │   definition foo state basz equals foo + 1
   │                        ‾‾‾‾
   └─ Test

Variable declaration:
┌─⯈ tests/test_variable_state/bad/unknown_state.catala_en:5.10-5.13:
└─┐
5 │   output foo content integer
  │          ‾‾‾
  └─ Test
#return code 123#
```
